*SVN*

* Replace the current block/continuation filter chain handling by an implementation based on a simple loop.  Closes #8226 [Stefan Kaes]

* Return the string representation from an Xml Builder when rendering a partial.  #5044 [tpope]

* Cleaned up, corrected, and mildly expanded ActionPack documentation.  Closes #7190 [jeremymcanally]

* Small collection of ActionController documentation cleanups.  Closes #7319 [jeremymcanally]

* Performance: patch cgi/session/pstore to require digest/md5 once rather than per #initialize.  #7583 [Stefan Kaes]

* Deprecation: verification with :redirect_to => :named_route shouldn't be deprecated.  #7525 [Justin French]


*1.13.3* (March 12th, 2007)

* Fix a bug in Routing where a parameter taken from the path of the current request could not be used as a query parameter for the next.  #6752 [Nicholas Seckar]

* session_enabled? works with session :off.  #6680 [Catfish]

* Performance: patch cgi/session to require digest/md5 once rather than per #create_new_id.  [Stefan Kaes]


*1.13.2* (February 5th, 2007)

* Add much-needed html-scanner tests.  Fixed CDATA parsing bug. [Rick]

* improve error message for Routing for named routes. [Rob Sanheim]

* Added enhanced docs to routing assertions. [Rob Sanheim]

* fix form_for example in ActionController::Resources documentation. [gnarg]

* Add singleton resources from trunk [Rick Olson]

* select :multiple => true suffixes the attribute name with [] unless already suffixed.  #6977 [nik.kakelin, ben, julik]

* Improve routes documentation.  #7095 [zackchandler]

* Resource member routes require :id, eliminating the ambiguous overlap with collection routes.  #7229 [dkubb]

* Fixed NumberHelper#number_with_delimiter to use "." always for splitting the original number, not the delimiter parameter #7389 [ceefour]

* Autolinking recognizes trailing and embedded . , : ;  #7354 [Jarkko Laine]

* Make TextHelper::auto_link recognize URLs with colons in path correctly, fixes #7268.  [imajes]
